--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -29,7 +29,7 @@
     font-size: 28px;
     font-weight: 700;
     color: #000;
-    margin: 0;
+    margin: 250px;
     font-family: var(--font-secondary);
   }
   
