--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@
 /* Colors */
 :root {
   --color-default: #212529;
-  --color-primary: #ce1212;
+  /* --color-primary: #ce1212; */
   --color-secondary: #37373f;
 }
 
