--- a/client/src/Components/Signup/Signup.css
+++ b/client/src/Components/Signup/Signup.css
@@ -36,6 +36,10 @@ input {
     -ms-border-radius: 36px;
 }
 
+.w3l-hotair-form{
+    overflow-y: scroll;
+    margin-bottom: 100px;
+}
 
 
 .w3l_form {
