--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -36,13 +36,13 @@
     border-radius: 50px;
     transition: 0.5s;
     color: #fff;
-    background: rgb(214, 42, 62);
-    box-shadow: 0 8px 28px rgba(206, 18, 18, 0.2);
+    background: #2596be;
+    box-shadow: 0 8px 28px #97d6ed;
   }
   
   .hero .btn-book-a-table:hover {
-    background:red;
-    box-shadow: 0 8px 28px rgba(206, 18, 18, 0.45);
+    background:#70c5e4;
+    box-shadow: 0 8px 28px #97d6ed;
   }
   
   .hero .btn-watch-video {
