--- a/client/src/Components/Login/Login.css
+++ b/client/src/Components/Login/Login.css
@@ -55,6 +55,11 @@ input {
     margin-top: 50px;
 }
 
+.img-fluid{
+    width:500px;
+    height:500px;
+}
+
 .content-wthree {
     flex-basis:50%;
     -webkit-flex-basis:50%;
