--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -6,12 +6,12 @@
     background: #fff;
     transition: all 0.5s;
     z-index: 997;
-    height: 100spx;
+    height: 100px;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   }
   
   #header.fixed-top {
-    height: 70px;
+    height: 90px;
   }
 
   #header .wills{
@@ -35,11 +35,17 @@
   }
   
   #header .logo a span {
-    color: #52a22a;
+    color: #2596be;
   }
   
   #header .logo img {
-    max-height: 40px;
+    width: 80px;
+    height: 90px;
+  }
+
+  #header .logo1 img {
+    width: 250px;
+    height: 40px;
   }
   
   .scrolled-offset {
@@ -102,7 +108,7 @@
     height: 2px;
     bottom: -6px;
     left: 0;
-    background-color: #52a22a;
+    background-color: #2596be;
     visibility: hidden;
     width: 0px;
     transition: all 0.3s ease-in-out 0s;
@@ -119,7 +125,7 @@
   .navbar .active,
   .navbar .active:focus,
   .navbar li:hover>a {
-    color: #52a22a;
+    color: #2596be;
   }
   
   .navbar .dropdown ul {
@@ -153,7 +159,7 @@
   .navbar .dropdown ul a:hover,
   .navbar .dropdown ul .active:hover,
   .navbar .dropdown ul li:hover>a {
-    color: #52a22a;
+    color: #2596be;
   }
   
   .navbar .dropdown:hover>ul {
@@ -262,7 +268,7 @@
   .navbar-mobile a:hover,
   .navbar-mobile .active,
   .navbar-mobile li:hover>a {
-    color: #52a22a;
+    color: #2596be;
   }
   
   .navbar-mobile .getstarted,
@@ -297,7 +303,7 @@
   .navbar-mobile .dropdown ul a:hover,
   .navbar-mobile .dropdown ul .active:hover,
   .navbar-mobile .dropdown ul li:hover>a {
-    color: #52a22a;
+    color: #2596be;
   }
   
   .navbar-mobile .dropdown>.dropdown-active {
