--- a/client/src/Components/Signup/Signup.css
+++ b/client/src/Components/Signup/Signup.css
@@ -24,6 +24,11 @@ img {
     max-width: 100%;
 }
 
+.img-fluid{
+    height:500px;
+    width:500px;
+}
+
 
 .btn,
 button,
@@ -102,7 +107,7 @@ p.account, p.account a {
 }
 
 p.account a{
-    color:#0568C1;
+    color:#2596be;
 }
 p.account a:hover {
     text-decoration: underline;
@@ -145,13 +150,13 @@ p.account a:hover {
 }
 .w3l-hotair-form input:focus {
     background:transparent;
-    border: 1px solid #0568C1;
+    border: 1px solid #2596be;
 }
 .w3l-hotair-form button {
     font-size: 18px;
     color: #fff;
     width: 100%;
-    background: #0568C1;
+    background: #2596be;
     border: none;
     padding: 14px 15px;
     font-weight: 700;
@@ -163,7 +168,7 @@ p.account a:hover {
 }
 
 .w3l-hotair-form button:hover {
-    background: #fdc500;
+    background: #65d2f9;
 }
 
 .w3l-hotair-form .social-icons ul li {
@@ -235,7 +240,7 @@ p.copy-footer-29 a {
 }
 
 p.copy-footer-29 a:hover {
-    color:#fdc500;
+    color:#65d2f9;
     transition: 0.5s ease;
     -webkit-transition: 0.5s ease;
     -o-transition: 0.5s ease;
