--- a/client/src/Components/Menu/Menu.css
+++ b/client/src/Components/Menu/Menu.css
@@ -52,7 +52,7 @@
 }
 
 .menu .tab-content .tab-header {
-  padding: 30px 0;
+  margin: 540px 0;
 }
 
 .menu .tab-content .tab-header p {
@@ -98,3 +98,4 @@
   font-weight: 700;
   color: var(--color-primary);
 }
+
