--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@
 /* Colors */
 :root {
   --color-default: #212529;
-  /* --color-primary: #ce1212; */
+  --color-primary: #ce1212;
   --color-secondary: #37373f;
 }
 
@@ -49,7 +49,7 @@ h6 {
 --------------------------------------------------------------*/
 section {
   overflow: hidden;
-  padding: 80px 0;
+  padding: 120px 0;
 }
 
 .section-bg {
